--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -194,17 +194,46 @@
                         <div class="panel-heading l"></div>
                         <!-- CONTENT FOR TESTIMONIAL -->
                         <div class="panel-body text-center">
-                            <!-- PROFILE PICTURE --><img class="panel-profile-img" src="/images/assets/abstract-architecture-11287678240s8xM.jpg">
+                            <!-- PROFILE PICTURE --><img class="panel-profile-img" src="https://scontent.fbos1-1.fna.fbcdn.net/v/t1.0-9/1962820_10151970401172117_2063839408_n.jpg?oh=9c3a3c77f186afd1a744f51db8303e9e&oe=58B56BC9">
                             <!-- NAME -->
                             <h5 class="panel-title">Heather Campbell Callaghan</h5>
                             <!-- QUOTE -->
                             <div class="m-b container-fluid">David is not only an exceptional tutor, but an exceptional human being as well. Having both our children benefit from Konjoian Education Center, they are a true testament of the individualized attention and approach received from David.
 </div>
                             <br>
-                            <br> </div>
+                            <br> 
+                        </div>
+                    </div>
+                    <br class="hide-on-small-only">
+                    <br class="hide-on-small-only">
+                    <!-- BOX FOR TESTIMONIAL -->
+                    <div class="card panel-profile m-b-0">
+                        <!-- COLORED HEADING -->
+                        <div class="panel-heading l"></div>
+                        <!-- CONTENT FOR TESTIMONIAL -->
+                        <div class="panel-body text-center">
+                            <!-- PROFILE PICTURE --><img class="panel-profile-img" src="https://scontent.fbos1-1.fna.fbcdn.net/v/t1.0-9/14962809_10208958483977257_5139576459152954540_n.jpg?oh=4e59089c45717e18f476e37fa50a633b&oe=58F44E33">
+                            <!-- NAME -->
+                            <h5 class="panel-title">Mary Kelvie Lyman</h5>
+                            <!-- QUOTE -->
+                            <div class="m-b container-fluid">All 3 of my sons would agree that David Konjoian and his team made academic challenges more manageable. Highly recommend them for math and college prep. Asking for help can be intimidating, but not here. They were also helpful when you hit a crisis in trying to fit you in when you need extra help.</div>
+                            <br>
+                            <br> 
+                        </div>
                     </div>
                     
                 </div>
+<!-- 
+
+
+
+
+*** SECOND SIDE *** 
+
+
+
+
+-->
                 <div class="col m6">
                     <div class="card-panel indigo white-text hide-on-small-only">
                         <h5 class="light">Ratings</h5> <span>5.0<i class="material-icons vertical-align">star_rate</i></span>
@@ -250,18 +279,38 @@
                         <div class="panel-heading r"></div>
                         <!-- CONTENT FOR TESTIMONIAL -->
                         <div class="panel-body text-center">
-                            <!-- PROFILE PICTURE --><img class="panel-profile-img" src="/images/assets/abstract-architecture-11287678240s8xM.jpg">
+                            <!-- PROFILE PICTURE --><img class="panel-profile-img" src="https://scontent.fbos1-1.fna.fbcdn.net/v/t1.0-9/13775553_10210521329928745_3036421141042838266_n.jpg?oh=f9ee444db0e7becf9940df1f204b9277&oe=58F7A7A6">
                             <!-- NAME -->
                             <h5 class="panel-title">Rita Gardner</h5>
                             <!-- QUOTE -->
-                            <div class="m-b container-fluid">Dave and is his staff are exceptional. He has supported our three sons, through middle school, high school and entry to college with a variety of tutoring support and standardized test taking. These include the SSAT, the SAT and the ACT. He supported our oldest son through high school (HS) tutoring, his application and acceptance process to Brown University. He worked across competing athletic schedules to make sure he was prepared for both the SAT and ACT.<br><br>
-
-With our middle son he supported him at the end of middle school with his high school admission process, ultimately being admitted to Phillips Academy Andover.  Now working with him on college exams, vetting the college process and helping him to find best college matches. <br><br>
-
-And currently working with our last son, on the HS admissions  process. <br><br>
-
-Each of our sons varied widely in their needed level of support, Dave and his team were able to work with each child's needs. He creates an excellent rapport with each student, and helps motivate them to be successful without undo pressure. As parents he is quick to respond with a vast array of questions, providing experience and supporting us to navigate our sons needs as individuals . We can not recommend his team's services any higher, a true Godsend.</div>
-                            <br> </div>
+                            <div class="m-b container-fluid">Dave and is his staff are exceptional. He has supported our three sons, through middle school, high school and entry to college with a variety of tutoring support and standardized test taking. These include the SSAT, the SAT and the ACT. He supported our oldest son through high school (HS) tutoring, his application and acceptance process to Brown University. He worked across competing athletic schedules to make sure he was prepared for both the SAT and ACT.
+                                <br><br>
+                            With our middle son he supported him at the end of middle school with his high school admission process, ultimately being admitted to Phillips Academy Andover.  Now working with him on college exams, vetting the college process and helping him to find best college matches. 
+                                <br><br>
+                            And currently working with our last son, on the HS admissions  process. 
+                                <br><br>
+                            Each of our sons varied widely in their needed level of support, Dave and his team were able to work with each child's needs. He creates an excellent rapport with each student, and helps motivate them to be successful without undo pressure. As parents he is quick to respond with a vast array of questions, providing experience and supporting us to navigate our sons needs as individuals . We can not recommend his team's services any higher, a true Godsend.
+                            </div>
+                            <br> 
+                        </div>
+                    </div>
+                    <br class="hide-on-small-only">
+                    <br class="hide-on-small-only">
+                    <!-- BOX FOR TESTIMONIAL -->
+                    <div class="card panel-profile m-b-0">
+                        <!-- COLORED HEADING -->
+                        <div class="panel-heading r"></div>
+                        <!-- CONTENT FOR TESTIMONIAL -->
+                        <div class="panel-body text-center">
+                            <!-- PROFILE PICTURE --><img class="panel-profile-img" src="/images/assets/abstract-architecture-11287678240s8xM.jpg">
+                            <!-- NAME -->
+                            <h5 class="panel-title">Paula Mg</h5>
+                            <!-- QUOTE -->
+                            <div class="m-b container-fluid">
+                                Both our kids were tutored by Mr. K. Not only were they able to achieve their goals and end up at their top choice colleges, but they gained tremendous confidence in themselves. He knows what is important and is a good mentor and teacher.
+                            </div>
+                            <br> 
+                        </div>
                     </div>
                     
                 </div>
