--- a/contact/index.html
+++ b/contact/index.html
@@ -195,7 +195,7 @@
                         <br>
                         <!-- QUOTE -->
                         <div class="m-b container-fluid"> <a href="tel:(647) 487-9077">(647) 487-9077</a>
-                            <br> <a href="mailto:info@syntax-solutions.xyz">info@syntax-solutions.xyz</a> </div>
+                            <br> <a href="mailto:support@konjoianeducationcenter.com">support@konjoianeducationcenter.com</a> </div>
                         <br> </div>
                 </div>
             </div>
