Add Julie Levine

--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -239,6 +239,21 @@ THIS IS WHERE THE LEFT COLUMN BEGINS
                             <br> 
                         </div>
                     </div>
+                    <!-- BOX FOR TESTIMONIAL -->
+                    <div class="card panel-profile m-b-0">
+                        <!-- COLORED HEADING -->
+                        <div class="panel-heading l"></div>
+                        <!-- CONTENT FOR TESTIMONIAL -->
+                        <div class="panel-body text-center">
+                            <!-- PROFILE PICTURE --><img class="panel-profile-img" src="https://scontent.fbos1-1.fna.fbcdn.net/v/t1.0-1/11401488_519066301581916_3993540693991719504_n.jpg?oh=d1753285c187ac4796c521fe4e382bf6&oe=591A5B8C">
+                            <!-- NAME -->
+                            <h5 class="panel-title">Julie Levine</h5>
+                            <!-- QUOTE -->
+                            <div class="m-b container-fluid">Dave and staff have really helped to improve my sons study and time management skills.</div>
+                            <br>
+                            <br> 
+                        </div>
+                    </div>
                     
                 </div>
 <!-- 
