--- a/programs/study-skills/index.html
+++ b/programs/study-skills/index.html
@@ -126,7 +126,7 @@
     </nav>
     <!-- BEGIN SITE CONTENT -->
     <main>
-    <div class="container">
+    <div class="container-yuge">
         <div class="intro-card">
             <div class="card-panel">
                 <h4 class="light">Study Skills</h4>
@@ -145,44 +145,27 @@
                 <ul class="collection with-header">
                     <li class="collection-header">
                         <h4 class="light"><b>The Curriculum</b>: Study Skills Part 1</h4>
-                        <p>The ten-week program, with two (1) hour session per week, costs $1,250.</p>
-                        <p>Over the course of five weeks, we will follow the plan below, with weekly subject follow up and calendar process:</p>
+                        <ul class="bullets">
+                            <li>This program will run for ten sessions with each session lasting (1) hour</li>
+                            <li>The sessions are 1 on 1</li>
+                            <li>The program will cost $1,250 for the ten sessions</li>
+                        </ul>
                     </li>
                     <li class="collection-item">
-                        <p><b>Weeks 1 &amp; 2</b></p>
+                        <p><strong>Program Curriculum</strong></p>
                         <ul class="bullets">
                             <li>Intro/Study Skills Checklist</li>
                             <li>Review Checklist/What's the plan?</li>
-                        </ul>
-                        <br> </li>
-                    <li class="collection-item">
-                        <p><b>Weeks 3 &amp; 4</b></p>
-                        <ul class="bullets">
                             <li>Time Management</li>
                             <li>Organizational Skills</li>
-                        </ul>
-                        <br> </li>
-                    <li class="collection-item">
-                        <p><b>Weeks 5 &amp; 6</b></p>
-                        <ul class="bullets">
                             <li>Note-Taking/Study Guide Prep</li>
                             <li>History</li>
-                        </ul>
-                        <br> </li>
-                    <li class="collection-item">
-                        <p><b>Weeks 7 &amp; 8</b></p>
-                        <ul class="bullets">
                             <li>Note-Taking/Study Guide Prep</li>
                             <li>Science</li>
-                        </ul>
-                        <br> </li>
-                    <li class="collection-item">
-                        <p><b>Weeks 9 &amp; 10</b></p>
-                        <ul class="bullets">
                             <li>Essay Writing</li>
                             <li>Essay Writing Continued/Skills Wrap Up</li>
                         </ul>
-                        <br> </li>
+                    </li>
                 </ul>
             </div>
             <!-- PART 2 -->
@@ -190,39 +173,23 @@
                 <ul class="collection with-header">
                     <li class="collection-header">
                         <h4 class="light"><b>The Curriculum</b>: Study Skills Part 2</h4>
-                        <p>The five-week program, with one (1) hour session per week, costs $550.</p>
-                        <p>Over the course of five weeks, we will follow the plan below:</p>
+                        <ul class="bullets">
+                            <li>This program will run for five sessions with each session lasting (1) hour</li>
+                            <li>The sessions are 1 on 1</li>
+                            <li>Weekly subject follow and calendar process</li>
+                            <li>The program will cost $50 for the five sessions</li>
+                        </ul>
                     </li>
                     <li class="collection-item">
-                        <p><b>Week 1</b></p>
+                        <p><strong>Program Curriculum</strong></p>
                         <ul class="bullets">
                             <li>Class Scheduling and Planning (Calendar)</li>
-                        </ul>
-                        <br> </li>
-                    <li class="collection-item">
-                        <p><b>Week 2</b></p>
-                        <ul class="bullets">
                             <li>Subject A Strategy</li>
-                        </ul>
-                        <br> </li>
-                    <li class="collection-item">
-                        <p><b>Week 3</b></p>
-                        <ul class="bullets">
                             <li>Subject B Strategy</li>
-                        </ul>
-                        <br> </li>
-                    <li class="collection-item">
-                        <p><b>Week 4</b></p>
-                        <ul class="bullets">
                             <li>Subject C Strategy</li>
-                        </ul>
-                        <br> </li>
-                    <li class="collection-item">
-                        <p><b>Week 5</b></p>
-                        <ul class="bullets">
                             <li>Course Evaluations</li>
                         </ul>
-                        <br> </li>
+                    </li>
                 </ul>
             </div>
             <!-- MIDDLE SCHOOL -->
@@ -230,69 +197,27 @@
                 <ul class="collection with-header">
                     <li class="collection-header">
                         <h4 class="light"><b>The Curriculum</b>: Middle School Study Skills</h4>
-                        <p>The ten-week program, with one (1) hour session per week, costs $850.</p>
-                        <p>Over the course of five weeks, we will follow the plan below:</p>
+                        <ul class="bullets">
+                            <li>This program will run for ten sessions with each session lasting (1) hour</li>
+                            <li>The sessions will be 1 on 1</li>
+                            <li>The program will cost $1,000 for the ten sessions</li>
+                        </ul>
                     </li>
                     <li class="collection-item">
-                        <p><b>Week 1</b></p>
+                        <p><strong>Program Curriculum</strong></p>
                         <ul class="bullets">
-                            <li>Organizing the Student</li>
+                            <li>Week 1: Organizing the Student</li>
+                            <li>Week 2: Identifying Strengths and Weaknesses</li>
+                            <li>Week 3: Modifying the Environment</li>
+                            <li>Week 4: The Locker vs. The Backpack</li>
+                            <li>Week 5: Time Management</li>
+                            <li>Week 6: Making Time Work (Planning)</li>
+                            <li>Week 7: Building Sustained Attention</li>
+                            <li>Week 8: Goal Direction/Oriented</li>
+                            <li>Week 9: Expect the Unexpected</li>
+                            <li>Week 10: Recap/Review</li>
                         </ul>
-                        <br> </li>
-                    <li class="collection-item">
-                        <p><b>Week 2</b></p>
-                        <ul class="bullets">
-                            <li>Identifying Strengths and Weaknesses</li>
-                        </ul>
-                        <br> </li>
-                    <li class="collection-item">
-                        <p><b>Week 3</b></p>
-                        <ul class="bullets">
-                            <li>Modifying the Environment</li>
-                        </ul>
-                        <br> </li>
-                    <li class="collection-item">
-                        <p><b>Week 4</b></p>
-                        <ul class="bullets">
-                            <li>The Locker VS. The Backpack</li>
-                        </ul>
-                        <br> </li>
-                    <li class="collection-item">
-                        <p><b>Week 5</b></p>
-                        <ul class="bullets">
-                            <li>Time Management</li>
-                        </ul>
-                        <br> </li>
-                    <li class="collection-item">
-                        <p><b>Week 6</b></p>
-                        <ul class="bullets">
-                            <li>Making Time Work (Planning)</li>
-                        </ul>
-                        <br> </li>
-                    <li class="collection-item">
-                        <p><b>Week 7</b></p>
-                        <ul class="bullets">
-                            <li>Building Sustained Attention</li>
-                        </ul>
-                        <br> </li>
-                    <li class="collection-item">
-                        <p><b>Week 8</b></p>
-                        <ul class="bullets">
-                            <li>Goal Direction/Oriented</li>
-                        </ul>
-                        <br> </li>
-                    <li class="collection-item">
-                        <p><b>Week 9</b></p>
-                        <ul class="bullets">
-                            <li>Expect the Unexpected</li>
-                        </ul>
-                        <br> </li>
-                    <li class="collection-item">
-                        <p><b>Week 10</b></p>
-                        <ul class="bullets">
-                            <li>Recap/Review</li>
-                        </ul>
-                        <br> </li>
+                    </li>
                 </ul>
             </div>
         </div>
