--- a/programs/college-counseling/index.html
+++ b/programs/college-counseling/index.html
@@ -128,29 +128,73 @@
             <h4 class="light">College Counseling</h4>
             <h6 class="grey-text text-darken-2 flow-text">We all want you to make it to college. But the application process is tough. So that is why we offer college counseling sessions to help you with your college application skills.</h6>
         </div>
-        <div class="col s12">
-            <ul class="collection with-header">
-                <li class="collection-header">
-                    <h4 class="light"><b>The Curriculum</b>: College Counseling</h4>
-                    <p>The ten-week program, with one (1) hour session per week, costs $1,250.</p>
-                    <p>Over the course of ten weeks, we will have discussions concerning:</p>
-                </li>
-                <li class="collection-item">
-                    <br>
-                    <ul class="bullets">
-                        <li>College Search and Establishment of a List of Schools to be Considered</li>
-                        <li>Information Gathering-Catalogs, Applications, Online Searches</li>
-                        <li>Athletic Recruiting</li>
-                        <li>Tour and Interview Scheduling</li>
-                        <li>Essay Writing</li>
-                        <li>Teacher Recommendations</li>
-                        <li>Mock Interviews</li>
-                        <li>Financial Aid and Scholarships</li>
-                        <li>Planning Internships and Community Service</li>
-                    </ul>
-                    <br>
-                </li>
-            </ul>
+        <div class="row">
+            <div class="col s12">
+                <ul class="tabs">
+                    <li class="tab col s6"><a href="#part1">College Counseling</a></li>
+                    <li class="tab col s6"><a href="#part2">Summer College Counseling</a></li>
+                </ul>
+            </div>
+        <!-- PART 1 -->
+            <div id="part1" class="col s12">
+                <ul class="collection with-header">
+                    <li class="collection-header">
+                        <h4 class="light"><b>The Curriculum</b>: College Counseling</h4>
+                        <ul class="bullets">
+                            <li>The program will consist of twelve (1) hour sessions</li>
+                            <li>The sessions will be 1 on 1</li>
+                            <li>The program is designed to be flexible with the student's schedule</li>
+                            <li>The program will cost $1,500</li>
+                        </ul>
+                        <p><strong>Payment Options</strong></p>
+                        <ul class="bullets">
+                            <li>Option 1: Full payment will recieve a $100 discount</li>
+                            <li>Option 2: Two payments of $750</li>
+                        </ul>
+                    </li>
+                    <li class="collection-item">
+                        <p><strong>Program Curriculum</strong></p>
+                        <ul class="bullets">
+                            <li>College search and establishment of a list of schools to be considered</li>
+                            <li>Information gathering-catalogs, applications, online Searches</li>
+                            <li>Athletic recruiting</li>
+                            <li>Tour and interview scheduling</li>
+                            <li>Essay writing</li>
+                            <li>Teacher recommendations</li>
+                            <li>Mock interviews</li>
+                            <li>Financial aid and scholarships</li>
+                            <li>Planning internships and community Service</li>
+                            <li>Resume creation</li>
+                        </ul>
+                        <br>
+                    </li>
+                </ul>
+            </div>
+        <!-- PART 2 -->
+            <div id="part2" class="col s12">
+                <ul class="collection with-header">
+                    <li class="collection-header">
+                        <h4 class="light"><b>The Curriculum</b>: Summer College Counseling</h4>
+                        <ul class="bullets">
+                            <li>This program will be five sessions with each session lasting (1) hour</li>
+                            <li>The sessions are 1 on 1</li>
+                            <li>The program will cost $500 for the five sessions</li>
+                        </ul>
+                    </li>
+                    <li class="collection-item">
+                        <p><strong>Program Curriculum</strong></p>
+                        <ul class="bullets">
+                            <li>College search and establishment of a list of schools to be considered</li>
+                            <li>Essay Writing</li>
+                            <li>Common Application Completion</li>
+                            <li>Resume Creation</li>
+                            <li>FAFSA Readiness Checklist</li>
+                            <li>Students Demonstrated Interest</li>
+                        </ul>
+                        <br>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="row">
             <div class="col s12">
