--- a/programs/test-prep/index.html
+++ b/programs/test-prep/index.html
@@ -131,140 +131,32 @@
             <h6 class="grey-text text-darken-2 flow-text">We offer test preparation for the SAT, ACT, PSAT, and SAT Subject Tests. We also offer test preparation for the SSAT, ISEE, and HSPT. At the graduate level, we can help with the GRE, GMAT, and LSAT.</h6> </div>
         <div class="row">
             <div class="col s12">
-                <ul class="tabs">
-                    <li class="tab col s6"><a href="#part1">SAT/ACT Program</a></li>
-                    <li class="tab col s6"><a href="#part2">Summer SAT/ACT Program</a></li>
-                </ul>
-            </div>
-        <!-- PART 1 -->
-            <div id="part1" class="col s12">
-                
                 <ul class="collection with-header">
                     <li class="collection-header">
                         <h4 class="light"><b>The Curriculum</b>: SAT/ACT Program</h4>
-                        <p>The ten-week program, with one (1) hour session per week, costs $850.</p>
-                        <p>Over the course of ten weeks, we will prepare for Math and English portions of the tests, alternating the subject each week:</p>
-                    </li>
-                    <li class="collection-item">
-                        <p><b>Week 1</b></p>
                         <ul class="bullets">
-                            <li>English</li>
+                            <li>The program will consist of ten sessions with each session lasting (1) hour</li>
+                            <li>The sessions will be 1 on 1</li>
+                            <li>The program will cost $850 for the ten sessions</li>
                         </ul>
-                        <br>
                     </li>
                     <li class="collection-item">
-                        <p><b>Week 2</b></p>
+                        <p><strong>Program Curriculum</strong></p>
                         <ul class="bullets">
-                            <li>Math</li>
-                        </ul>
-                        <br>
-                    </li>
-                    <li class="collection-item">
-                        <p><b>Week 3</b></p>
-                        <ul class="bullets">
-                            <li>English</li>
-                        </ul>
-                        <br>
-                    </li>
-                    <li class="collection-item">
-                        <p><b>Week 4</b></p>
-                        <ul class="bullets">
-                            <li>Math</li>
-                        </ul>
-                        <br>
-                    </li>
-                    <li class="collection-item">
-                        <p><b>Week 5</b></p>
-                        <ul class="bullets">
-                            <li>English</li>
-                        </ul>
-                        <br>
-                    </li>
-                    <li class="collection-item">
-                        <p><b>Week 6</b></p>
-                        <ul class="bullets">
-                            <li>Math</li>
-                        </ul>
-                        <br>
-                    </li>
-                    <li class="collection-item">
-                        <p><b>Week 7</b></p>
-                        <ul class="bullets">
-                            <li>English</li>
-                        </ul>
-                        <br>
-                    </li>
-                    <li class="collection-item">
-                        <p><b>Week 8</b></p>
-                        <ul class="bullets">
-                            <li>Math</li>
-                        </ul>
-                        <br>
-                    </li>
-                    <li class="collection-item">
-                        <p><b>Week 9</b></p>
-                        <ul class="bullets">
-                            <li>English</li>
-                        </ul>
-                        <br>
-                    </li>
-                    <li class="collection-item">
-                        <p><b>Week 10</b></p>
-                        <ul class="bullets">
-                            <li>Math</li>
+                            <li>Week 1: English</li>
+                            <li>Week 2: Math</li>
+                            <li>Week 3: English</li>
+                            <li>Week 4: Math</li>
+                            <li>Week 5: Englsih</li>
+                            <li>Week 6: Math</li>
+                            <li>Week 7: English</li>
+                            <li>Week 8: Math</li>
+                            <li>Week 9: English</li>
+                            <li>Week 10: Math</li>
                         </ul>
                         <br>
                     </li>
                 </ul>
-            </div>
-        <!-- PART 2 -->
-            <div id="part2" class="col s12">
-                <ul class="collection with-header">
-                    <li class="collection-header">
-                        <h4 class="light"><b>The Curriculum</b>: Summer SAT/ACT Program</h4>
-                        <p>The five-week program, with two (1) hour sessions per week, costs $950.</p>
-                        <p>We also offer a summer version of the SAT/ACT program, running only during the summer. The program runs for five weeks:</p>
-                    </li>
-                    <li class="collection-item">
-                        <p><b>Week 1</b></p>
-                        <ul class="bullets">
-                            <li>Introduction</li>
-                            <li>Determine Strengths and Weaknesses</li>
-                        </ul>
-                        <br>
-                    </li>
-                    <li class="collection-item">
-                        <p><b>Week 2</b></p>
-                        <ul class="bullets">
-                            <li>Math</li>
-                        </ul>
-                        <br>
-                    </li>
-                    <li class="collection-item">
-                        <p><b>Week 3</b></p>
-                        <ul class="bullets">
-                            <li>Math</li>
-                        </ul>
-                        <br>
-                    </li>
-                    <li class="collection-item">
-                        <p><b>Week 4</b></p>
-                        <ul class="bullets">
-                            <li>Reading</li>
-                            <li>Grammar</li>
-                        </ul>
-                        <br>
-                    </li>
-                    <li class="collection-item">
-                        <p><b>Week 5</b></p>
-                        <ul class="bullets">
-                            <li>Science</li>
-                            <li>Wrap Up Evaluation</li>
-                        </ul>
-                        <br>
-                    </li>
-                </ul>
-            
             </div>
             <div class="row">
                 <a href="#datmodal" class="waves-effect waves-light modal-trigger btn schedule-button">Schedule a session</a>
