--- a/programs/study-skills/index.html
+++ b/programs/study-skills/index.html
@@ -176,7 +176,7 @@
                         <ul class="bullets">
                             <li>This program will run for five sessions with each session lasting (1) hour</li>
                             <li>The sessions are 1 on 1</li>
-                            <li>Weekly subject follow and calendar process</li>
+                            <li>Weekly subject follow up and calendar process</li>
                             <li>The program will cost $50 for the five sessions</li>
                         </ul>
                     </li>
