--- a/contact/index.html
+++ b/contact/index.html
@@ -174,7 +174,7 @@
                         
                         <!-- NAME -->
                         <h5 class="panel-title">Michael Palladino</h5>
-                        <h6 class="grey-text text-darken-2">Director Marketing & Technology</h6>
+                        <h6 class="grey-text text-darken-2">Director of Marketing & Technology</h6>
                         <br>
                         <!-- QUOTE -->
                         <div class="m-b container-fluid"> <a href="(781) 983-7116">(781) 983-7116</a>
