--- a/programs/study-skills/index.html
+++ b/programs/study-skills/index.html
@@ -154,16 +154,23 @@
                     <li class="collection-item">
                         <p><strong>Program Curriculum</strong></p>
                         <ul class="bullets">
-                            <li>Intro/Study Skills Checklist</li>
-                            <li>Review Checklist/What's the plan?</li>
-                            <li>Time Management</li>
-                            <li>Organizational Skills</li>
-                            <li>Note-Taking/Study Guide Prep</li>
-                            <li>History</li>
-                            <li>Note-Taking/Study Guide Prep</li>
-                            <li>Science</li>
-                            <li>Essay Writing</li>
-                            <li>Essay Writing Continued/Skills Wrap Up</li>
+                            <li>Identifying areas of strengths and weaknesses</li>
+                            <li>Organization skills</li>
+                            <li>Note-taking from lectures and from textbook</li>
+                            <li>Making a test study guide</li>
+                            <li>Setting appropriate and attainable goals</li>
+                            <li>Writing skills</li>
+                            <li>How to read for comprehension (before, during, and after reading skills)</li>
+                        </ul>
+                    </li>
+                    <li class="collection-item>
+                        <p><strong>We employ a variety of organizational tools as part of our curriculum. These include:</strong></p>
+                        <ul class="bullets">
+                            <li>Mock lectures</li>
+                            <li>Mock science lab excercises</li>
+                            <li>Recall note taking strategy</li>
+                            <li>Fostering active learning</li>
+                            <li>Outlined for papers</li>
                         </ul>
                     </li>
                 </ul>
