--- a/programs/study-skills/index.html
+++ b/programs/study-skills/index.html
@@ -160,7 +160,12 @@
                             <li>Making a test study guide</li>
                             <li>Setting appropriate and attainable goals</li>
                             <li>Writing skills</li>
-                            <li>How to read for comprehension (before, during, and after reading skills)</li>
+                            <li>How to read for comprehension (before, during, and after reading skills)
+                                <ul class="bullets-2">
+                                    <li>Textbook comprehension (science, social studies, etc.)</li>
+                                    <li>Novel, short story, ELA reading comprehension</li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                     <li class="collection-item>
