--- a/programs/study-skills/index.html
+++ b/programs/study-skills/index.html
@@ -168,7 +168,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="collection-item>
+                    <li class="collection-item">
                         <p><strong>We employ a variety of organizational tools as part of our curriculum. These include:</strong></p>
                         <ul class="bullets">
                             <li>Mock lectures</li>
