--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -172,7 +172,7 @@ THIS IS WHERE THE LEFT COLUMN BEGINS
                         <div class="panel-heading l"></div>
                         <!-- CONTENT FOR TESTIMONIAL -->
                         <div class="panel-body text-center">
-                            <!-- PROFILE PICTURE --><img class="panel-profile-img" src="https://scontent.fbos1-1.fna.fbcdn.net/v/t1.0-1/p160x160/558244_2149028445245_213305078_n.jpg?oh=004cf52294edf58640faf05c403a6ed0&oe=58994C66">
+                            <!-- PROFILE PICTURE --><img class="panel-profile-img" src="https://openclipart.org/download/247319/abstract-user-flat-3.svg">
                             <!-- NAME -->
                             <h5 class="panel-title">Monica Gallacher</h5>
                             <!-- QUOTE -->
