--- a/programs/test-prep/index.html
+++ b/programs/test-prep/index.html
@@ -12,7 +12,8 @@
     <link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
     <!-- Framework (null) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-<!-- Favorite Icons -->
+    <script src="http://www.w3schools.com/lib/w3data.js"></script>
+    <!-- Favorite Icons -->
     <!-- Favicon for Opera SpeedDial -->
     <link rel="icon" type="image/png" href="/images/favicons/favicon_opera.png" />
     <!-- Traditional Favicon -->
@@ -45,13 +46,17 @@
     <meta name="keywords" content="konjoian, david, palladino, michael, education, tutor, tutoring, study, learn, easier, way, succeed, andover, massachusetts, ma, lawrence, school, high, middle, greenhouse, best, testimonials, work">
     <!-- Author -->
     <meta name="author" content="Ryan McBride, Shardul Joshi">
-    <title>Test Preparation</title>
+    <title>Study Skills</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <div class="z-depth-1">
     <div class="site-header hide-on-med-and-down">
         <!-- grey section above navigation -->
-        <div class="container-fluid"> <a href="/home.html"><h4 class="header-text white-text">Konjoian Education Center <small style="font-family: 'Roboto';font-size: .45em">&nbsp; "An Easier Way to Succeed"</small></h4></a> </div>
+        <div class="container-fluid">
+            <a href="/home.html">
+                <h4 class="header-text white-text">Konjoian Education Center <small style="font-family: 'Roboto';font-size: .45em">&nbsp; "An Easier Way to Succeed"</small></h4>
+            </a>
+        </div>
     </div>
     <!-- end grey section -->
     <nav class="z-depth-0">
@@ -112,57 +117,103 @@
         </div>
     </nav>
 </div>
-    
-    
+
 <body>
     <nav class="breadcrumb-nav z-depth-0">
         <div class="nav-wrapper container-fluid">
-          <div class="col s12">
-            <a href="/home.html" class="breadcrumb grey-text">Home</a>
-            <a href="/programs/test-prep/" class="breadcrumb grey-text">Programs</a>
-            <a href="/programs/test-prep/" class="breadcrumb grey-text">Test Preparation</a>
-          </div>
+            <div class="col s12">
+                <a href="/home.html" class="breadcrumb grey-text">Home</a>
+                <a href="/programs/" class="breadcrumb grey-text">Programs</a>
+                <a href="/programs/study-skills/" class="breadcrumb grey-text">Study Skills</a>
+            </div>
         </div>
     </nav>
     <!-- BEGIN SITE CONTENT -->
-    <div class="container">
-        <div class="card-panel">
-            <h4 class="light">Test Preparation</h4>
-            <h6 class="grey-text text-darken-2 flow-text">We offer test preparation for the SAT, ACT, PSAT, and SAT Subject Tests. We also offer test preparation for the SSAT, ISEE, and HSPT. At the graduate level, we can help with the GRE, GMAT, and LSAT.</h6> </div>
-        <div class="row">
-            <div class="col s12">
-                <ul class="collection with-header">
-                    <li class="collection-header">
-                        <h4 class="light"><b>The Curriculum</b>: SAT/ACT Program</h4>
-                        <ul class="bullets">
-                            <li>The program will consist of ten sessions with each session lasting (1) hour</li>
-                            <li>The sessions will be 1 on 1</li>
-                            <li>The program will cost $850 for the ten sessions</li>
+    <main>
+        <div class="container-yuge">
+            <div class="intro-card">
+                <div class="card-panel">
+                    <h4 class="light">Test Preparation</h4>
+                    <h6 class="grey-text text-darken-2 flow-text">We offer test preparation for the SAT, ACT, PSAT, and SAT Subject Tests. We also offer test preparation for the SSAT, ISEE, and HSPT. At the graduate level, we can help with the GRE, GMAT, and LSAT.</h6>
+                </div>
+                <div class="row">
+                    <div class="col s12">
+                        <ul class="tabs">
+                            <li class="tab col s6"><a href="#sat-act">SAT/ACT</a></li>
+                            <li class="tab col s6"><a href="#gre-gmat-lsat-mcat">GRE/GMAT/LSAT/MCAT</a></li>
                         </ul>
-                    </li>
-                    <li class="collection-item">
-                        <p><strong>Program Curriculum</strong></p>
-                        <ul class="bullets">
-                            <li>Week 1: English</li>
-                            <li>Week 2: Math</li>
-                            <li>Week 3: English</li>
-                            <li>Week 4: Math</li>
-                            <li>Week 5: Englsih</li>
-                            <li>Week 6: Math</li>
-                            <li>Week 7: English</li>
-                            <li>Week 8: Math</li>
-                            <li>Week 9: English</li>
-                            <li>Week 10: Math</li>
+                    </div>
+                    <!-- PART 1 -->
+                    <div id="sat-act" class="col s12">
+                        <ul class="collection with-header">
+                            <li class="collection-header">
+                                <h4 class="light"><b>The Curriculum</b>: SAT/ACT Program</h4>
+                                <ul class="bullets">
+                                    <li>The program will consist of ten sessions with each session lasting (1) hour</li>
+                                    <li>The sessions will be 1 on 1</li>
+                                    <li>The program will cost $850 for the ten sessions</li>
+                                </ul>
+                            </li>
+                            <li class="collection-item">
+                                <p><strong>Program Curriculum</strong></p>
+                                <p>Option A*Option B</p>
+                                <ul class="bullets">
+                                    <li>Session 1: EnglishEnglish</li>
+                                    <li>Session 2: EnglishMath</li>
+                                    <li>Session 3: EnglishEnglish</li>
+                                    <li>Session 4: EnglishMath</li>
+                                    <li>Session 5: EnglishEnglish</li>
+                                    <li>Session 6: MathMath</li>
+                                    <li>Session 7: MathEnglish</li>
+                                    <li>Session 8: MathMath</li>
+                                    <li>Session 9: MathEnglish</li>
+                                    <li>Session 10: MathMath</li>
+                                </ul>
+                                <br>
+                                <p><b>*Or Vice Versa</b></p>
+                            </li>
                         </ul>
-                        <br>
-                    </li>
-                </ul>
-            </div>
-            <div class="row">
-                <a href="#datmodal" class="waves-effect waves-light modal-trigger btn schedule-button">Schedule a session</a>
+                    </div>
+                    <!-- PART 2 -->
+                    <div id="gre-gmat-lsat-mcat" class="col s12">
+                        <ul class="collection with-header">
+                            <li class="collection-header">
+                                <h4 class="light"><b>The Curriculum</b>: GRE/GMAT/LSAT/MCAT Program</h4>
+                                <ul class="bullets">
+                                    <li>This program will have two options to choose from:</li>
+                                    <ul class="bullets">
+                                        <li>Option A: (12) sessions with each session lasting one hour for $1,800</li>
+                                        <li>Option B: (18) sessions with each session lasting one hour for $2,400</li>
+                                    </ul>
+                                    <li>The sessions will be 1 on 1</li>
+                                </ul>
+                            </li>
+                            <li class="collection-item">
+                                <p><strong>Program Curriculum</strong></p>
+                                <p>Option A*Option B</p>
+                                <p><b>Quantitative Questions</b></p>
+                                <ul class="bullets">
+                                    <li>Problem Solving</li>
+                                    <li>Data Sufficiency</li>
+                                </ul>
+                                <br>
+                                <p><b>Verbal Questions</b></p>
+                                <ul class="bullets">
+                                    <li>Reading Comprehension</li>
+                                    <li>Critical Reasoning</li>
+                                    <li>Sentence Correction</li>
+                                </ul>
+                                <br>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <a href="#datmodal" class="waves-effect waves-light modal-trigger btn schedule-button">Schedule a session</a>
+                </div>
             </div>
         </div>
-    </div>
+    </main>
     <footer class="dark">
         <div class="container">
             <div class="row">
@@ -188,15 +239,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
     <script src="../../javascript/init.js"></script>
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-87948805-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+        ga('create', 'UA-87948805-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
