--- a/programs/test-prep/index.html
+++ b/programs/test-prep/index.html
@@ -170,7 +170,7 @@
                                     <li>Session 10: MathMath</li>
                                 </ul>
                                 <br>
-                                <p><b>*Or Vice Versa</b></p>
+                                <p><strong>*Or Vice Versa</strong></p>
                             </li>
                         </ul>
                     </div>
@@ -190,13 +190,13 @@
                             </li>
                             <li class="collection-item">
                                 <p><strong>Program Curriculum</strong></p>
-                                <p><b>Quantitative Questions</b></p>
+                                <p><strong>Quantitative Questions</strong></p>
                                 <ul class="bullets">
                                     <li>Problem Solving</li>
                                     <li>Data Sufficiency</li>
                                 </ul>
                                 <br>
-                                <p><b>Verbal Questions</b></p>
+                                <p><strong>Verbal Questions</strong></p>
                                 <ul class="bullets">
                                     <li>Reading Comprehension</li>
                                     <li>Critical Reasoning</li>
